app/kube-config/ingress/dev-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     cert-manager.io/cluster-issuer: letsencrypt
# spec:
#   tls:
#   - hosts:
#     - dapi.yokai-express.com
#     - dapp.yokai-express.com
#     secretName: tls-secret
#   rules:
#   - host: dapi.yokai-express.com
#     http:
#       paths:
#       - path: /api/(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: api-gateway
#             port:
#               number: 80
#   - host: dapp.yokai-express.com
#     http:
#       paths:
#       - path: /(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: client-mobile
#             port:
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: client-mobile
            port:
              number: 80
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
