app/kube-config/ingress/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - tadmin.yokaiexpress.com
    secretName: tls-secret
  rules:
  - host: tadmin.yokaiexpress.com
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
  - host: tadmin.yokaiexpress.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: client-mobile
            port:
              number: 80
